--- a/static/styles.css
+++ b/static/styles.css
@@ -1,16 +1,23 @@
 :root {
-    --color1: #f5ca54;
+    --color1: #FBC62C;
+    --color3: #010100;
     --color2: #fbe8cc;
-    --color3: #000000;
 }
+
+
 
 body, html {
     font-family: Arial, sans-serif;
-    color: var(--color3);
-    background: white;
+    color: var(--color2);
+    background: var(--color3);
     margin: 0;
     padding: 0;
     height: 100%;
+
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
 }
 
 header {
@@ -18,6 +25,7 @@ header {
     color: var(--color3);
     /* padding-top: -5px; */
     min-height: 70px;
+    padding: 0;
     text-transform: uppercase;
     margin: 0;
 }
@@ -26,15 +34,21 @@ header a {
     color: var(--color3);
     text-decoration: none;
     font-size: 16px;
+    padding: 0;
+}
+
+h1  {
+    margin: 0;
 }
 
 header h1 {
     font-size: 60px;
+    padding: 0;
 }
 
 footer {
     background: black;
-    color: white;
+    color: var(--color2);
     text-align: center;
     margin: 20px 0px;
     padding: 5px;
@@ -65,7 +79,7 @@ footer {
     max-width: 80%;
     min-height: 20vh;
 
-    color: var(--color3);
+    color: var(--color2);
     font-size: small;
     
 
@@ -133,13 +147,15 @@ footer {
 .content img {
     padding: 20px 0px;
     margin: 5px;
-    max-width: 768px;
+    max-width: 500px;
 }
 
 .overview {
-    color: rgba(1, 1, 1, .8);
-    font-weight: 600;
-    width: 100%;
+    /* color: rgba(1, 1, 1, .8); */
+    color: var(--color2);
+    font-weight: 500;
+    /* font-style: semi-italic; */
+    width: 80%;
     font-size: 1.2em;
 }
 
@@ -149,15 +165,20 @@ footer {
     /* padding: 20px; */
     
     font-size: 1.1em;
-    background: white;
+    background: var(--color3);
     line-height: 1.5;
 
     /* font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
 }
 
 .lead {
-    font-size: 2em;
-    margin-bottom: -5px;
+    font-size: 4em;
+    /* margin-bottom: -15px; */
+    margin: 0;
+
+    font-family: "Jacquard 24", system-ui;
+  font-weight: 500;
+  font-style: normal;
 }
 
 
