--- a/static/styles.css
+++ b/static/styles.css
@@ -2,6 +2,18 @@
     --color1: #FBC62C;
     --color3: #010100;
     --color2: #FAF9F6;
+
+
+    --golden-yellow: #fbc62c;
+    --deep-black: #010100;
+    --cream: #FFF4D5;
+    --dark-gray: #3E3E3E;
+    --brownish-gray: #5A5551;
+}
+
+/* Gets rid of horizontal scroll-bar */
+* {
+    box-sizing: border-box;
 }
 
 body, html {
@@ -11,11 +23,13 @@ body, html {
     margin: 0;
     padding: 0;
     height: 100%;
-
+    width: 100%;
     font-family: "Merriweather", serif;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
+
+    
 }
 
 header {
@@ -23,8 +37,12 @@ header {
     color: var(--color3);
     min-height: 70px;
     padding: 0;
-    text-transform: uppercase;
+    
     margin: 0;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 header a {
@@ -32,6 +50,7 @@ header a {
     text-decoration: none;
     font-size: 16px;
     padding: 0;
+    
 }
 
 h1  {
@@ -41,10 +60,100 @@ h1  {
 header h1 {
     font-size: 60px;
     padding: 0;
+    text-transform: uppercase;
+    flex: 3;
+}
+
+
+
+.sub-header {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    padding: 0px 0px;
+    background-color: var(--deep-black);
+    color: var(--cream);
+}
+
+.submenu-button {
+    width: 100%;
+    text-align: center;
+    border-right: 2px solid var(--cream);
+    border-bottom: 5px solid var(--cream) ;
+    /* width: fit-content; */
+    /* padding: 30px5px; */
+    transition: 0.3s;
+    /* set text weight */
+    font-weight: 700;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+}
+
+.submenu-button a {
+    color: var(--cream);
+    text-decoration: inherit;
+}
+
+.rounded-button {
+    background-color: var(--deep-black);
+    color: var(--golden-yellow);
+    padding: 10px 20px;
+    border: none;
+    border-radius: 10px; /* this creates the rounded corners */
+    cursor: pointer;
+    font-size: 16px;
+    transition: 0.3s;
+    /* Optional: add some hover effect for better UX */
+}
+
+.rounded-button:hover {
+    background-color: #111100; /* slightly lighter black when hovered */
+}
+
+.rounded-button-ylw {
+    background-color: var(--golden-yellow);
+    color: var(--deep-black);
+    padding: 8px 8px;
+    border: none;
+    border-radius: 10px; /* this creates the rounded corners */
+    cursor: pointer;
+    font-size: 16px;
+    transition: 0.3s;
+
+    /* Optional: add some hover effect for better UX */
+}
+
+
+.no-right-border{
+    border-right: none;
+}
+
+.submenu-button:hover {
+    border-bottom: 5px solid var(--color1) ;
+    color: var(--color1);
+    translate: 0px 1px;
+}
+
+.menu-blurb {
+    flex: 2;
+    text-overflow: ellipsis;
+    font-size: 10px;
+    text-align: center;
+    max-height: 60px;
+
+    padding: 0px 10px;
+}
+
+.menu-button {
+    flex: 1;
+    text-align: center;
+    vertical-align: middle;
 }
 
 footer {
-    background: black;
+    background: var(--color3);
     color: var(--color2);
     text-align: center;
     margin: 20px 0px;
@@ -53,7 +162,8 @@ footer {
 }
 
 .container {
-    width: 80%;
+    max-width: 1200px;
+    width: 95%;
     margin: auto;
 }
 
@@ -77,7 +187,6 @@ footer {
     color: var(--color2);
     font-size: small;
     
-
     display: flex;
     flex-flow: row nowrap;
     align-items: start;
@@ -86,7 +195,6 @@ footer {
     text-align: left;
     margin-top: 10px;
 }
-
 
 
 .preview img {
@@ -144,6 +252,7 @@ footer {
 .content img {
     padding: 40px 0px;
     text-align: center;
+    max-width: 100%;
 }
 
 .overview {
@@ -161,6 +270,7 @@ footer {
     font-size: 1.3em;
     background: var(--color3);
     line-height: 1.4;
+    text-align: justify;
 }
 
 
@@ -169,6 +279,10 @@ footer {
 @media (max-width: 768px) {
     .container {
         width: 95%;
+    }
+
+    .hide-on-small {
+        display: none;
     }
 
     .frontpage {
