--- a/static/styles.css
+++ b/static/styles.css
@@ -278,12 +278,12 @@ footer {
     height: 100%;
 }
 
-.featured {
+/* .featured {
     border-color: var(--color1);
     border-radius: 10px;
     border-width: 2px;
     border-style: solid;
-}
+} */
 
 /* Article
  -
